--- a/classic techniques/20-scroll-based-animation/src/style.css
+++ b/classic techniques/20-scroll-based-animation/src/style.css
@@ -1,17 +1,17 @@
-*
-{
+* {
     margin: 0;
     padding: 0;
 }
 
-html,
-body
-{
-    overflow: hidden;
+html {
+    background: #1e1a20;
 }
 
-.webgl
-{
+/* html,body {
+    overflow: hidden;
+} */
+
+.webgl {
     position: fixed;
     top: 0;
     left: 0;
@@ -19,8 +19,7 @@ body
 }
 
 
-.section
-{
+.section {
     display: flex;
     align-items: center;
     height: 100vh;
@@ -33,7 +32,6 @@ body
     padding-right: 10%;
 }
 
-section:nth-child(odd)
-{
+section:nth-child(odd) {
     justify-content: flex-end;
 }
